fdo#79615 create clipping polygon correctly

Change-Id: I758b6bc8da33a20a0807da171120a8f84214dcfd